--- a/src/app/Layout/footer/footer.html
+++ b/src/app/Layout/footer/footer.html
@@ -1,6 +1,6 @@
 <!-- Start footer -->
 <div class="footer text-white">
-    <div class="container px-0" style="background-image: none;">
+    <div class="px-4" style="background-image: none;">
         <div class="row">
             <div class="col-lg-4 col-12 text-start px-0 start text-lg-start text-center">
                 <div class="d-flex mx-0  justify-content-center justify-content-lg-start ms-5 ps-3 ps-sm-0 ms-lg-0">
