--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -1,6 +1,6 @@
 <div class="text-white team">
-    <h1 class="mt-5 text-end big">CLIENTS</h1>
-    <div class="container p-md-5 p-3 rounded team-container">
+    <h1 class=" text-end big">CLIENTS</h1>
+    <div class=" p-md-5 p-3 rounded team-container">
         <div class=" row g-3 g-lg-4">
             <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2 ">
                 <div class="p-4  rounded-3 d-flex w-auto  right-box h-90 justify-content-between ">
