--- a/src/app/Layout/main-outlet/main-outlet.html
+++ b/src/app/Layout/main-outlet/main-outlet.html
@@ -1,7 +1,15 @@
-        <div class="container px-lg-0 px-3 pb-5" style="background-image: url('assets/img/bg.svg'); background-repeat: no-repeat;
-        background-position-x: 50%;">
-        
-        <app-navbar/>
-        <<router-outlet></router-outlet>
-         <app-footer/>
-    </div>
+<div
+  class="app-wrapper"
+  style="
+    background-image: url('assets/img/bg.svg');
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+  "
+>
+  <app-sidebar (toggleSidebar)="onToggleSidebar($event)"></app-sidebar>
+
+  <div class="main-content my-5" [class.sidebar-closed]="isSidebarClosed">
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </div>
+</div>
