--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,17 @@ body {
     font-weight: 100;
     scroll-behavior: smooth;
 }
+
+ .swal2-toast{
+        background:linear-gradient(to right, rgb(0 68 68), rgb(0 170 170)) !important;
+    color: white !important;
+    top: 20px !important;
+}
+.swal2-modal{
+        background:linear-gradient(to right, rgb(0 68 68), rgb(0 170 170)) !important;
+    color: white !important;
+
+}
 .navbar-toggler {
     background-color: var(--dark);
 }
@@ -20,6 +31,14 @@ body {
 .container{
     background-size: contain;
     background-repeat: no-repeat;
+}
+input[type="number"] {
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 .big {
     font-size: 60px;
@@ -159,7 +178,7 @@ body {
 }
 .card-box {
     overflow-y: auto;
-    min-height: 1185px;
+    // min-height: 1185px;
     max-height: 1185px;
 
 
