--- a/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
+++ b/src/app/Pages/client-profile/Components/feedback-client/feedback-client.html
@@ -1,5 +1,5 @@
 <div class="text-white feed-back px-md-0 px-3">
-    <div class="container " style="background-image: none;">
+    <div class=" " style="background-image: none;">
         <h1 class="mb-4 text-end mt-5 px-0 ">FEEDBACKS</h1>
         <div class="p-lg-5 p-4 pb-5 rounded-3 g-4 row feedback-box mb-5 pe-lg-4">
 
