--- a/src/app/Pages/client-profile/Components/project-client/project-client.html
+++ b/src/app/Pages/client-profile/Components/project-client/project-client.html
@@ -1,6 +1,6 @@
 <!-- Start Projects-->
 <div class="text-white start-projects-client ">
-    <div class="container " style="background-image: none;">
+    <div class=" " style="background-image: none;">
         <h1 class="mb-4 mb-5 mt-5 pt-5 text-end big">PROJECTS</h1>
         <div class="p-md-4 px-md-5 pb-5 px-3 rounded-3 g-4 row projects-client justify-content-between">
             <div class="col-md-6 col-2">
