--- a/src/app/Pages/profile/components/projects-profile/projects-profile.html
+++ b/src/app/Pages/profile/components/projects-profile/projects-profile.html
@@ -1,6 +1,6 @@
 <!-- Start Projects-->
 <div class="text-white start-projects px-md-0 px-3">
-    <div class="container " style="background-image: none;">
+    <div class=" " style="background-image: none;">
         <h1 class="mb-4 text-end big px-0">PROJECTS</h1>
         <div class="p-md-4 p-3 px-md-5 pb-lg-5 pb-3 rounded-3 g-4 row projects pe-lg-4 ">
             <div class="px-0 mb-4 pt-4 pb-2 rounded col-lg-7 d-flex blue">
