--- a/src/app/Pages/Auth/login/login.html
+++ b/src/app/Pages/Auth/login/login.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<h1 class="mb-5 text-white text-end big">CLIENT PORTAL</h1>
+
+<div class="signup d-flex w-100 h-50    ">
+    <div class="rightSide w-50">
+        <img src="assets/img/login.png" alt="" width="100%">
+    </div>
+    <form class="signup-box rounded-3 text-white w-50" [formGroup]="loginForm">
+        <h1 class="mb-5 text-whitebig">LOGIN</h1>
+
+        <div class="row">
+            <div class="row second">
+                <input class="mt-2 px-0 py-3" type="email" formControlName="email" placeholder="Email Address"
+                    aria-label="Email Address" />
+                <input class="mt-5 px-0 py-3" type="password" formControlName="password" placeholder="Password" />
+            </div>
+        </div>
+
+        <h2 class="mt-5  text-end pt-sm-4 logout cr" style="color: #00bec5;" (click)="onLogin()">SUBMIT <i
+                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
+
+    </form>
+
+
+
+</div>
