--- a/src/app/Pages/profile/profile.html
+++ b/src/app/Pages/profile/profile.html
@@ -1,6 +1,6 @@
     <h1 class="mt-5 text-white text-end big">PROFILE</h1>
     <div class="text-white profile  mb-5">
-        <div class="container p-xl-5 p-4 rounded-3">
+        <div class=" p-xl-5 p-4 rounded-3">
             <div class="row">
                 <div class="pt-lg-0 col half-logo"><img class="top mt-0" src="assets/img/half-logo.svg" alt="">
                 </div>
