--- a/src/app/Layout/sidebar/sidebar.scss
+++ b/src/app/Layout/sidebar/sidebar.scss
@@ -11,11 +11,15 @@
   transition: width 0.3s ease;
   overflow: hidden;
   z-index: 1000;
-
+  background-position: right;
+  background-position-x: 55%;
+  background-size: cover;
+  background-repeat: no-repeat;
+    background: linear-gradient(250deg, #00AAAA -90%, #000 64%);
   &.closed {
     width: 80px;
 
- 
+
   }
 
   .toggle-area {
@@ -52,7 +56,9 @@
   .search-box {
     display: flex;
     align-items: center;
-    background: #1f2937;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
     padding: 8px 10px;
     border-radius: 8px;
     margin-bottom: 20px;
@@ -87,55 +93,59 @@
 
       &:hover,
       &.active {
-        background: #414141;
-        color: #fff;
-      }
-      p{
-            font-weight: 800;
-            height: 70%;
-            text-transform:capitalize ;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);        color: #fff;
       }
 
-     
+      p {
+        font-weight: 800;
+        height: 70%;
+        text-transform: capitalize;
+      }
+
+
     }
   }
 
 
-.profile {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #414141;
-  padding: 10px 15px;
-  border-radius: 8px;
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 90%;
-  color: #fff;
-  transition: all 0.3s ease;
+  .profile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #414141;
+    padding: 10px 15px;
+    border-radius: 8px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    color: #fff;
+    transition: all 0.3s ease;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
 
+    .logout {
+      font-size: 18px;
+      color: #e5e7eb;
+      cursor: pointer;
+      transition: color 0.3s;
 
-  .logout {
-    font-size: 18px;
-    color: #e5e7eb;
-    cursor: pointer;
-    transition: color 0.3s;
-
-    &:hover {
-      color: #f87171;
+      &:hover {
+        color: #f87171;
+      }
     }
-  }
 
-}
+  }
 }
 
 .profile .closed {
-     display: none;
-     opacity: 0;
-      pointer-events: none;
-  }
+  display: none;
+  opacity: 0;
+  pointer-events: none;
+}
 
 .logo {
   display: flex;
@@ -158,8 +168,8 @@
   transition: 0.2s all ease-in;
   overflow: hidden;
   top: 50px;
-    margin-inline-start: 200px;
-    transform: rotate(180deg);
+  margin-inline-start: 200px;
+  transform: rotate(180deg);
 }
 
 .logo .center {
@@ -170,21 +180,21 @@
 }
 
 .line {
-  background-color:#cbd5e1;
+  background-color: #cbd5e1;
   width: 100%;
   height: 0.5px;
   opacity: 0.8;
-  transition:  0.4s  width ease-in-out;
+  transition: 0.4s width ease-in-out;
 }
 
 .searchInput {
-  transition: 0.4s  width ease-in-out;
+  transition: 0.4s width ease-in-out;
 }
 
 .searchInput.close {
   width: 0;
   overflow: hidden;
-  transition:  0.4s  width ease-in-out;
+  transition: 0.4s width ease-in-out;
 }
 
 .searchInput input {
@@ -195,6 +205,7 @@
   transition: 0.4s width ease-in-out;
   width: 100%;
   color: var(--white);
-  background: #414141;
-;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);  ;
 }
