--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -12,24 +12,28 @@
                     <h1 class="mb-0">{{ today | date: 'd, MMM' | uppercase }}</h1>
                     <h4>Hello, Youssef</h4>
                     <div class="flex-wrap pt-4 pb-2 rounded d-flex blue ps-md-0 ps-2 ">
-                        <div class="p-0 text-center col me-5 ms-1">
-                            <p class="mb-0">Completed</p>
-                            <p class="mb-0 fs-3">14</p>
+                                <div class="p-0 text-center col me-5 ms-1">
+                            <p class="mb-0">Rising Talent</p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().risingTalent | leadingZero}}</p>
                         </div>
                         <div class="p-0 text-center col me-5">
-                            <p class="mb-0">In Progress</p>
-                            <p class="mb-0 fs-3">02</p>
+                            <p class="mb-0">Design Star </p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().designStar | leadingZero}}</p>
                         </div>
                         <div class="p-0 text-center col">
-                            <p class="mb-0">Paused</p>
-                            <p class="mb-0 fs-3">06</p>
+                            <p class="mb-0">Top Tier</p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().topTier | leadingZero}}</p>
+                        </div>
+                              <div class="p-0 text-center col">
+                            <p class="mb-0">The Maestro</p>
+                            <p class="mb-0 fs-3">{{getProjectCounts().maestro| leadingZero}}</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2">
                 <div class="p-md-4 p-3 mx-0 rounded-3 row h-100 right-box ">
-                    <div class="p-3 pb-0  mt-1 mt-md-0 rounded-3 inner-box col ">
+                    <div class="p-3 pb-0  mt-1 mt-md-0 rounded-3 inner-box col " style="flex: 0;">
                         <div class="p-3 d-flex gap-3  ">
                             <div class="px-0 me-3">
                                 <h1 class="mb-3">14</h1>
@@ -45,12 +49,12 @@
                     </div>
                     <div class="col-lg-6 col-sm-7 ms-auto col-6 text-end px-0">
                         <div class="mx-0 row">
-                            <h2 class="p-0 mb-3 mt-1">PSR</h2>
-                            <p class="p-0 mb-0 lh-1" style="white-space: pre-line;">
+                            <h2 class="p-0 mb-5 mt-1">PSR</h2>
+                            <p class="p-0 mb-2  lh-1" style="white-space: pre-line;">
                                 PROJECT SUCCESS
                                 RATE
                             </p>
-                            <span class="p-0 pt-md-0 pt-1">87%</span>
+                            <span class="pt-2">87%</span>
                         </div>
                     </div>
                 </div>
@@ -98,7 +102,7 @@
                                 </div>
                             </div>
 
-                            <img [src]="baseimageUrl + card.imageUrl" class="card-img-top" alt="" height="283px">
+                            <img [src]="baseimageUrl + card.imageUrl" class="card-img-top" alt=""  height="300px">
                             <div class="pb-0 card-body">
                                 <h6 class="mb-1 fw-bold card-title">{{ card.name }}</h6>
                                 <p class="mb-1 card-text">{{ card.jobTitle }}</p>
