--- a/src/app/Pages/service/service.html
+++ b/src/app/Pages/service/service.html
@@ -45,7 +45,7 @@
 
           <h3 class="service-name">{{ service.name }}</h3>
           <p class="service-date">
-            Created on: {{ '2025-01-01' | date:'mediumDate' }}
+            Created on: {{ service.createdAt | date:'mediumDate' }}
           </p>
         </div>
       }
