--- a/src/styles.scss
+++ b/src/styles.scss
@@ -580,7 +580,7 @@ body {
 }
 .feed-boxfeed {
     overflow-y: auto;
-    min-height: 1000px;
+    // min-height: 1000px;
     max-height: 1050px;
     padding-right: 20px !important;
 }
@@ -1800,6 +1800,18 @@ body {
     font-size: 13px;
     color: #ffffff !important;
 }
+.CreateAccount-box textarea {
+    border: none;
+    border-bottom: 1px solid #ffffff26;
+    outline: none;
+    background-color: transparent;
+    font-size: 13px;
+    color: #ffffff !important;
+    height: 50px;
+    resize: none;
+    scrollbar-width: none;
+}
+
 .CreateAccount-box .first input {
     width: 220px;
 }
@@ -1861,7 +1873,6 @@ body {
 .calender {
     background-color: transparent;
     overflow: hidden;
-    max-width: 800px;
     color: rgb(255, 255, 255);
 }
 .header {
@@ -1896,9 +1907,8 @@ body {
     color: #ffffff84;
 }
 .days div {
-    width: 20%;
+    width: 14%;
     max-height: 28px;
-    text-align: center;
     padding: 10px 0px;
     color: #fff;
 }
@@ -1907,7 +1917,10 @@ body {
     transition: color 0.1s;
     margin: 0px 0px 1px 0px;
 }
-.days div:hover {
+.days div p{
+    width: fit-content;
+}
+.days div p:hover {
     color: var(--blue);
     border-bottom: 1px solid var(--blue);
 }
@@ -1921,7 +1934,25 @@ body {
 .rightlow{
 background-color: #000000BF;
 border-radius: 10px;
+height: 300px;
+overflow-y: scroll;
+overflow-x: hidden;
+  img{
+    object-fit: fill;
+  }
+&::-webkit-scrollbar {
+    width: 5px;
+    height: 25px;
 }
+&::-webkit-scrollbar-thumb {
+    background-color: #6d6d6d;
+    border-radius: 4px;
+}
+&::-webkit-scrollbar-track {
+    background-color: #ffffff10;
+}
+}
+
 .leftlow button,
 .rightlow button {
     width: 15px;
